[package]
name = "cntour"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.4.0"
image = "0.25"
noise-functions = "0.8.2"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
actix-cors = "0.7"
prisma = "0.1.1"
env_logger = "0.11.10"
log = "0.4"
rayon = "1.10"

[profile.dev]
opt-level = 0